Make use of mvn for OpenJCEPlus test execution
This update allows for the test infrastructure to make use of `mvn`
directly for testing `OpenJCEPlus`. This allows for `mvn` to control
dependency usage along with using the same test infrastructure and
plugins in use within the open source project.

Signed-off-by: Jason Katonica <katonica@us.ibm.com>